[package]
name = "mailgun_v3_eu"
description = "reqwest based web bindings for Mailgun's v3 JSON API - EU region"
readme = "README.md"
repository = "https://github.com/pablodelolmo/mailgun_v3_eu"
license = "MIT"
version = "0.9.0"
authors = ["Nathan Merritt <nathan@gnmerritt.net>"]
keywords = ["mailgun", "reqwest", "email", "api"]
categories = ["api-bindings"]
edition = "2018"


[dependencies]
chrono = "^0.4.5"
reqwest = { version = "^0.10.1", features = ["json", "blocking"] }
serde = "^1.0.71"
serde_derive = "^1.0.71"
serde_json = "^1.0.24"

[dev-dependencies]
mockito = "^0.23.1"
tokio = { version = "^0.2.13", features = ["macros", "rt-threaded"] }
